css/style.css
/* ... */
.plans__image-box {
  margin-top: 70px;
  display: flex;
  flex-direction: column;
  gap: 30px;
  align-items: center;
  justify-content: center;
}

.plans__price-box {
  margin-block: 50px 50px;
  margin-top: auto;
  display: flex;
  flex-direction: column;
  gap: 20px;
  align-items: center;
  justify-content: center;
}
.plans__price-box span {
  color: var(--secondary);
  font-weight: normal;
}

.network {
  padding-block: 75px 25px;
  margin: 0 auto;
  background: linear-gradient(
    180deg,
    rgba(248, 248, 248, 0.27) 0%,
    rgba(248, 248, 248, 0) 50%
  );
}

.network__wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 150px;
}

.network__content h3 {
  max-width: 380px;
}

.network__image-box {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 36px;
}

.feedback {
  padding-block: 25px 30px;
  margin: 0 auto;
  max-width: 1300px;
}

.feedback__wrapper {
  display: flex;
  flex-direction: column;
  gap: 60px;
}

.feedback__cardbox {
  display: grid;
  grid-template-columns: repeat(3, 400px);
  column-gap: 50px;
}

.feedback__card {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  gap: 20px;
  border: 2px solid var(--card-border);
  border-radius: 10px;
  padding: 30px;
}

.feedback__card-title {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  gap: 78px;
}

.feedback__card-info {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  gap: 20px;
}

.feedback__card-personal-info {
  display: flex;
  flex-direction: column;
  gap: 5px;
  justify-content: flex-start;
  align-items: flex-start;
}

.feedback__card-rating {
  display: flex;
  flex-direction: row;
  gap: 10px;
  justify-content: space-between;
  align-items: center;
}

.feedback__card-text {
  text-align: left;
}

.active-card {
  border: 2px solid var(--accent);
}

.feedback__active-card {
  position: relative;
  background-color: white;
}

.feedback__active-card::before {
  content: "";
  top: 0px;
  position: absolute;
  background: var(--shadow-primary);
  opacity: 0.06;
  filter: blur(57px);
  border-radius: 10px;
  display: block;
  width: 80%;
  height: 330px;
  z-index: -1;
  left: 50%;
  transform: translate(-50%, 0px);
  pointer-events: none;
}

.feedback__slide-btns {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  gap: 860px;
  width: 90%;
}

.feedback__slide-pointer {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  gap: 15px;
}

.feedback__btns {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  max-height: 60px;
  gap: 20px;
}

.subscribe {
  padding-block: 30px 30px;
  position: relative;
  margin: 0 auto;
  overflow: hidden;
}

.subscribe__overlay {
  width: 120vw;
  display: block;
  transform: translateX(-25vw);
  height: 100%;
  top: 50%;
  z-index: -2;
  position: absolute;
  background: #f8f8f8;
}

.subscribe::before {
  content: "";
  position: absolute;
  background: var(--shadow-primary);
  opacity: 0.06;
  filter: blur(57px);
  border-radius: 10px;
  display: block;
  width: 80%;
  height: 250px;
  z-index: 0;
  left: 50%;
  transform: translate(-50%, 18px);
  pointer-events: none;
}

.subscribe__wrapper {
  border-radius: 10px;
  padding: 60px 70px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  gap: 340px;
  background: white;
  z-index: 1;
  position: relative;
}

.subscribe__content {
  display: flex;
  flex-direction: column;
  gap: 20px;
  justify-content: flex-start;
  align-items: flex-start;
}

.subscribe__btn {
  height: 60px;
  background-color: var(--accent);
  color: var(--active-link);
  line-height: 25px;
  border-radius: 10px;
  padding: 17px 55px;
}

.footer {
  background-color: #f8f8f8;
}

.footer__navigation {
  padding-block: 30px 100px;
  margin: 0 auto;
}

.footer__wrapper {
  display: flex;
  flex-direction: row;
  gap: 230px;
  /* padding: 0px 150px 100px; */
  justify-content: space-between;
  align-items: flex-start;
}

.footer__flexbox {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
}

.footer__impressum {
  gap: 30px;
  max-width: 340px;
}

.footer__content {
  display: flex;
  flex-direction: row;
  gap: 125px;
}

.footer__logobox {
  gap: 20px;
}

.footer__iconbox {
  gap: 30px;
}

.footer__iconbox p {
  color: #afb5c0;
}

.footer__icons {
  display: flex;
  flex-direction: row;
  gap: 20px;
  justify-content: space-between;
  align-items: center;
}

.footer__list-header {
  min-width: fit-content;
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.footer__list {
  gap: 10;
}
/* ... */

